--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "fetch-jsonp": "^1.0.5",
+    "fetchp": "naderio/fetchp",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "whatwg-fetch": "^2.0.2"
