--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "babel-polyfill": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "express": "^4.14.0",
+    "express-http-proxy": "^0.11.0",
     "fetch-jsonp": "^1.0.5",
     "fetchp": "naderio/fetchp",
+    "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "whatwg-fetch": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "npm run build&&gh-pages -d build"
-  },
-  "homepage": "http://benjaminj6.github.io/sunrise-sunset"
+  }
 }
