--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,17 @@
     "express-http-proxy": "^0.11.0",
     "fetch-jsonp": "^1.0.5",
     "fetchp": "naderio/fetchp",
+    "forever": "^0.15.3",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "whatwg-fetch": "^2.0.2"
+    "whatwg-fetch": "^2.0.2",
+    "winston": "^2.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "server": "nodemon server/index.js",
+    "dev": "react-scripts start",
+    "start": "forever server",
+    "server": "nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
