--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.22.0",
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-http-proxy": "^0.11.0",
-    "forever": "^0.15.3"
+    "forever": "^0.15.3",
+    "morgan": "^1.7.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^3.14.1",
@@ -22,6 +25,10 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
+    "start": "forever index.js",
     "dev": "nodemon"
+  },
+  "engines": {
+    "node": "6.9.1"
   }
 }
