--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,7 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-http-proxy": "^0.11.0",
-    "forever": "^0.15.3",
-    "morgan": "^1.7.0",
-    "winston": "^2.3.1"
+    "forever": "^0.15.3"
   },
   "devDependencies": {
     "eslint": "^3.14.1",
