--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-http-proxy": "^0.11.0",
-    "forever": "^0.15.3"
+    "forever": "^0.15.3",
+    "number-is-nan": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^3.14.1",
