--- a/package.json
+++ b/package.json
@@ -62,11 +62,14 @@
     "fetch-jsonp": "^1.0.5",
     "fetchp": "naderio/fetchp",
     "forever": "^0.15.3",
+    "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.2",
     "winston": "^2.3.1"
   },
