--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
+    "nock": "^9.0.5",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
