add peer dependency that ended up missing

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
     "nock": "^9.0.5",
+    "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
