--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "nock": "^9.0.5",
     "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.8.5"
+    "react-scripts": "0.8.5",
+    "redux-mock-store": "^1.2.2"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
@@ -28,7 +29,7 @@
     "build": "REACT_APP_SERVER=//benjaminjohnson-sunrise-sunset.herokuapp.com react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "coverage": "npm run test -- --coverage"
+    "coverage": "npm run test -- --coverage --no-cache"
   },
   "proxy": "http://localhost:3001/",
   "peerDependencies": {
