--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
     "babel-register": "^6.22.0",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
-    "express-http-proxy": "^0.11.0"
+    "express-http-proxy": "^0.11.0",
+    "forever": "^0.15.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "forever server.js",
+    "dev": "nodemon server.js"
   }
 }
