--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
   "scripts": {
     "start": "forever server.js",
     "dev": "nodemon server.js"
+  },
+  "engines": {
+    "node": "7.5.0"
   }
 }
