--- a/package.json
+++ b/package.json
@@ -8,5 +8,6 @@
   "license": "MIT",
   "scripts": {
     "deploy-server": "git subtree push --prefix server heroku master"
-  }
+  },
+  "homepage": "http://benjaminj6.github.io/sunrise-sunset"
 }
