--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-promise": "^3.4.1",
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
+    "gh-pages": "^0.12.0",
     "mockdate": "^2.0.1",
     "nock": "^9.0.5",
     "react-addons-test-utils": "^15.4.2",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
+    "object.values": "^1.0.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -25,12 +27,14 @@
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0"
   },
+  "homepage": "http://benjaminj6.github.io/sunrise-sunset",
   "scripts": {
     "start": "react-scripts start",
     "build": "REACT_APP_SERVER=//bjohnson-sunrise-sunset.herokuapp.com react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "coverage": "npm run test -- --coverage --no-cache"
+    "coverage": "npm run test -- --coverage --no-cache",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "proxy": "http://localhost:3001/",
   "peerDependencies": {
