--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0"
   },
-  "homepage": "http://benjaminj6.github.io/sunrise-sunset",
+  "homepage": "http://benjaminj6.github.io/horizon",
   "scripts": {
     "start": "react-scripts start",
     "build": "REACT_APP_SERVER=//bjohnson-sunrise-sunset.herokuapp.com react-scripts build",
