--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# Distribution
+build/
 
-# dependencies
+# elm-package generated files
+elm-stuff
+
+# elm-repl generated files
+repl-temp-*
+
+# Dependency directories
 node_modules
 
-# testing
-coverage
+# IDE
+.vscode/
 
-# misc
+# Misc.
+wireframes/
+
+# Desktop Services Store on macOS
 .DS_Store
-.env
-.eslintrc.json
-npm-debug.log
-
-client/eject
