--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "node scripts/build.js",
+    "start": "node scripts/start.js",
+    "package": "elm-package",
+    "make": "elm-make",
+    "repl": "elm-repl",
+    "reactor": "elm-reactor",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "serve ."
+    "dev": "elm-app start"
   },
   "repository": {
     "type": "git",
@@ -16,5 +22,36 @@
   "license": "MIT",
   "dependencies": {
     "serve": "^6.0.6"
+  },
+  "devDependencies": {
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^7.1.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "chalk": "^2.1.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.28.7",
+    "dotenv": "^4.0.0",
+    "elm": "^0.18.0",
+    "elm-hot-loader": "0.5.4",
+    "elm-test": "^0.18.8",
+    "elm-webpack-loader": "^4.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.3",
+    "minimist": "1.2.0",
+    "postcss-loader": "^2.0.5",
+    "react-dev-utils": "^4.0.1",
+    "react-error-overlay": "^2.0.1",
+    "string-replace-loader": "^1.3.0",
+    "style-loader": "^0.18.1",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.8.1"
   }
 }
