--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "gh-pages": "^0.12.0",
     "mockdate": "^2.0.1",
     "nock": "^9.0.5",
+    "prop-types": "^15.6.0",
     "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.8.5",
+    "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.2.2"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "object.values": "^1.0.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
@@ -31,7 +33,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "REACT_APP_SERVER=//bjohnson-sunrise-sunset.herokuapp.com react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test-later": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "coverage": "npm run test -- --coverage --no-cache",
     "deploy": "npm run build&&gh-pages -d build"
