--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "homepage": "http://benjaminj6.github.io/horizon",
   "scripts": {
     "start": "react-scripts start",
-    "build": "REACT_APP_SERVER=//bjohnson-sunrise-sunset.herokuapp.com react-scripts build",
+    "build": "REACT_APP_API=//api.sunrise-sunset.org/json react-scripts build",
     "test-later": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "coverage": "npm run test -- --coverage --no-cache",
